[gd_scene load_steps=45 format=3 uid="uid://bhfifqorg0fi4"]

[ext_resource type="Script" uid="uid://da4p4pjxbwehj" path="res://components/Player/character_body_2d.gd" id="1_ph1f6"]
[ext_resource type="PackedScene" uid="uid://dxljrfefydguf" path="res://components/projectiles/bubble_shooter.tscn" id="3_46jg3"]
[ext_resource type="Texture2D" uid="uid://bwj4ssjob1kc0" path="res://assets/Kings and Pigs/Sprites/Pig-Sheet.png" id="3_mpawu"]
[ext_resource type="PackedScene" uid="uid://bu4muuwlf1gse" path="res://components/Player/bubble_indicator.tscn" id="4_hx8dc"]
[ext_resource type="PackedScene" uid="uid://byk4tk4nfjdke" path="res://components/Player/player_camera.tscn" id="5_o667d"]
[ext_resource type="PackedScene" uid="uid://dgp8apr7bquat" path="res://components/Player/Expression.tscn" id="6_ue0el"]
[ext_resource type="AudioStream" uid="uid://cwg3k3tqd0gaj" path="res://assets/Sounds/Impact.wav" id="7_hmxcw"]
[ext_resource type="AudioStream" uid="uid://wygib6x00pjm" path="res://assets/Sounds/364929__jofae__game-die.wav" id="8_5g86m"]
[ext_resource type="AudioStream" uid="uid://bgyrt2se7bnp1" path="res://assets/Sounds/386625__jalastram__sfx_jump_31.wav" id="8_ijsib"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvp3"]
atlas = ExtResource("3_mpawu")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lquwl"]
atlas = ExtResource("3_mpawu")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("3_mpawu")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("3_mpawu")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("3_mpawu")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2yge"]
atlas = ExtResource("3_mpawu")
region = Rect2(0, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_seu75"]
atlas = ExtResource("3_mpawu")
region = Rect2(80, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhm"]
atlas = ExtResource("3_mpawu")
region = Rect2(160, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq2sk"]
atlas = ExtResource("3_mpawu")
region = Rect2(240, 400, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph1f6"]
atlas = ExtResource("3_mpawu")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("3_mpawu")
region = Rect2(0, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("3_mpawu")
region = Rect2(80, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("3_mpawu")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg77c"]
atlas = ExtResource("3_mpawu")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdy4"]
atlas = ExtResource("3_mpawu")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48qg"]
atlas = ExtResource("3_mpawu")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vivmo"]
atlas = ExtResource("3_mpawu")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cqfq"]
atlas = ExtResource("3_mpawu")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaehf"]
atlas = ExtResource("3_mpawu")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_074og"]
atlas = ExtResource("3_mpawu")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cegan"]
atlas = ExtResource("3_mpawu")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_82xsv"]
atlas = ExtResource("3_mpawu")
region = Rect2(720, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_getpj"]
atlas = ExtResource("3_mpawu")
region = Rect2(800, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryguw"]
atlas = ExtResource("3_mpawu")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa6cj"]
atlas = ExtResource("3_mpawu")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0odxb"]
atlas = ExtResource("3_mpawu")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lswn8"]
atlas = ExtResource("3_mpawu")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6jrf"]
atlas = ExtResource("3_mpawu")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqvo"]
atlas = ExtResource("3_mpawu")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsp4k"]
atlas = ExtResource("3_mpawu")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq58d"]
atlas = ExtResource("3_mpawu")
region = Rect2(400, 80, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_seu75"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bvp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lquwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2yge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seu75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq2sk")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph1f6")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg77c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vivmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cqfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaehf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_074og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cegan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82xsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_getpj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryguw")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa6cj")
}],
"loop": false,
"name": &"landing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0odxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lswn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6jrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsp4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ph1f6"]
size = Vector2(12, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hx8dc"]
size = Vector2(4.37499, 3.75)

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_b5xp4"]
loop = false
fade_time = 0.0
stream_count = 2
stream_0 = ExtResource("7_hmxcw")
stream_1 = ExtResource("8_5g86m")

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 66
z_as_relative = false
scale = Vector2(1.2, 1.2)
collision_layer = 2
collision_mask = 277
platform_wall_layers = 1
script = ExtResource("1_ph1f6")

[node name="ExpressionHolder" type="Node2D" parent="."]

[node name="Expression" parent="ExpressionHolder" instance=ExtResource("6_ue0el")]
z_index = 2
position = Vector2(-15.8333, -10)
animation = &"default"
autoplay = "default"
flip_h = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_seu75")
animation = &"falling"
frame_progress = 0.224558

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ph1f6")

[node name="Shooter" parent="." node_paths=PackedStringArray("shooter_ref", "indicator") instance=ExtResource("3_46jg3")]
shooter_ref = NodePath("..")
indicator = NodePath("../BubbleIndicator")

[node name="BubbleIndicator" parent="." instance=ExtResource("4_hx8dc")]
position = Vector2(-19, -23.3333)

[node name="PlayerFeet" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFeet"]
position = Vector2(0, 6.66667)
shape = SubResource("RectangleShape2D_hx8dc")
debug_color = Color(0.97845, 0, 0.396087, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerFeet"]
position = Vector2(4.16667, 0.833333)
shape = SubResource("RectangleShape2D_hx8dc")
disabled = true
debug_color = Color(0.97845, 0, 0.396087, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PlayerFeet"]
position = Vector2(-4.16667, 0.833333)
shape = SubResource("RectangleShape2D_hx8dc")
disabled = true
debug_color = Color(0.97845, 0, 0.396087, 0.42)

[node name="PlayerCamera" parent="." instance=ExtResource("5_o667d")]

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamPlaylist_b5xp4")
pitch_scale = 2.0

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ijsib")
volume_db = -15.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
